--- a/_pages/dei.html
+++ b/_pages/dei.html
@@ -7,6 +7,9 @@ author_profile: true
 
 {% include base_path %}
 
+<embed src="https://static1.squarespace.com/static/5900d1173a041127105a4e78/t/5ee053844df10d4bc294c40a/1591759748146/LabPoster_vDNA.pdf" width="800px" height="2100px" />
+
+
 {% for post in site.dei reversed %}
   {% include archive-single.html %}
 {% endfor %}
