--- a/_pages/dei.html
+++ b/_pages/dei.html
@@ -1,13 +1,13 @@
 ---
 layout: archive
-title: "DEI"
+title: "Diversity/Equity/Inclusion"
 permalink: /dei/
 author_profile: true
 ---
 
 {% include base_path %}
 
-<embed src="https://static1.squarespace.com/static/5900d1173a041127105a4e78/t/5ee053844df10d4bc294c40a/1591759748146/LabPoster_vDNA.pdf" width="800px" height="2100px" />
+<embed src="https://static1.squarespace.com/static/5900d1173a041127105a4e78/t/5ee053844df10d4bc294c40a/1591759748146/LabPoster_vDNA.pdf" width="600px" height="1600px" />
 
 
 {% for post in site.dei reversed %}
