--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,9 @@ author_profile: true
 
 {% include base_path %}
 
+Fall 2023
+&nsbp;&nsbp;&nsbp;BIOL 3133 Genetics Lab
+
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
