--- a/_pages/research.html
+++ b/_pages/research.html
@@ -52,7 +52,7 @@ lower mutation rates, highlighting spontaneous mutations are still generally del
    quantified. The molecular mechanisms of beneficial plastic and genetic responses of gene expression can also be 
    revealed.</p>  
 <br />
-4. Context dependence of mutational features: rates, spectra, and fitness effects</b><br />
+<b>4. Context dependence of mutational features: rates, spectra, and fitness effects</b><br />
 <p style="text-indent: 25px;">DNA mutations are the ultimate source of evolution. DNA mutations are also cellular-level traits 
    reflecting the robustness of replication and repairing pathways. Therefore, studying mutational features not only
    enhances our predictability in organismal evolution but also helps us understand the processes critical for cellular
