--- a/_pages/opportunities.html
+++ b/_pages/opportunities.html
@@ -1,1 +1,15 @@
+---
+layout: archive
+title: "Opportunities"
+permalink: /opportunities/
+author_profile: true
+---
 
+{% include base_path %}
+
+<b>Undergraduate Students and Perspective Master Students</b><br />
+<p style="text-indent: 25px;">Please feel free to contact Dr. Ho by an email if you are interested in joining the lab!</p> 
+
+{% for post in site.research %}
+  {% include archive-single.html %}
+{% endfor %}
