--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,8 +7,8 @@ author_profile: true
 
 {% include base_path %}
 
-Fall 2023
-&nsbp;&nsbp;&nsbp;BIOL 3133 Genetics Lab
+Fall 2023<br \>
+<p>&nsbp;&nsbp;&nsbp;BIOL 3133 Genetics Lab</p>
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
