--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,9 +6,9 @@ author_profile: true
 ---
 
 {% include base_path %}
-
+<br \>
 Fall 2023<br \>
-<p>&nsbp;&nsbp;&nsbp;BIOL 3133 Genetics Lab</p>
+<p style="text-indent: 25px;">BIOL 3133 Genetics Lab</p>
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
