--- a/_pages/research.html
+++ b/_pages/research.html
@@ -40,11 +40,11 @@ lower mutation rates, highlighting spontaneous mutations are still generally del
 <p style="text-indent: 25px;">Gene expression alterations are frequently observed in microbial adaptations to environmental challenges.
    However, the evolutionary direction of plastic (immediate) and genetic (long-term) changes may not be consistent.
    My previous research found that, when organisms encounter novel environments, plastic transcriptomic changes are
-   often maladaptive (Ho & Zhang 2019; Ho & Zhang 2020). However, it is possible that there is a different trend when
+   often maladaptive (Ho & Zhang 2018; Ho & Zhang 2019). However, it is possible that there is a different trend when
    the population is moved to a frequently encountered environment instead of a novel environment (Ho & Li et al. 2020).</p> 
 <p style="text-indent: 25px;">In the future, the lab will study the role of gene expression changes in microbial adaptations to 
    stressful environments, such as different antibiotics or extreme temperatures. The proposed experiment involves
-   the <i>Escherichia coli</i> populations previously adapted to the benign environment (LB broth at 37 °C). 
+   the <i>Escherichia coli</i> populations previously adapted to the benign environment. 
    The original gene expression and the plastic gene expression are measured by RNA-seq in the original and a new 
    stressful environment, respectively. After a period of experimental evolution in a stressful environment, the 
    adaptive gene expression is again obtained by RNA-seq. By comparing original, plastic, and adaptive gene expression
