--- a/_pages/research.html
+++ b/_pages/research.html
@@ -62,7 +62,7 @@ lower mutation rates, highlighting spontaneous mutations are still generally del
    environments, and the lack of such knowledge limits our understanding of how organisms respond to different
    environments.</p> 
 <p style="text-indent: 25px;">To address this need, the lab plans to estimate the rates, the spectra, and the fitness effects
-   of spontaneous mutations in different environments using Escherichia coli as a model. The mutation accumulation
+   of spontaneous mutations in different environments using <i>Escherichia coli</i> as a model. The mutation accumulation
    (MA) experiments in <i>E. coli</i> will be conducted, where the non-lethal spontaneous mutations are sampled in a random
    fashion. The follow-up whole-genome sequencing of a large number of MA lines enables reliable measurements of
    mutation rates and spectra of spontaneous mutations. Fitness estimates of these MA lines will be performed as well.</p> 
