--- a/_pages/research.html
+++ b/_pages/research.html
@@ -11,7 +11,7 @@ author_profile: true
 <p style="text-indent: 25px;">Population-genetic theories describe how intra-specific genetic diversity is shaped by evolutionary forces 
 such as mutation, selection, and genetic drift. Mutation generates genetic variation, while selection and genetic 
 drift then dictate the fate of mutations by fitness-related and stochastic effects, respectively. To study the roles 
-of mutation, selection, and genetic drift in evolution, my previous research involved ~100 <i>Escherichia coli</i> 
+of mutation, selection, and genetic drift in evolution, my previous research involved dozens of <i>Escherichia coli</i> 
 populations that have evolved for several hundred days in the lab with rich and complex medium under various bottleneck 
 sizes and mutation rates (Ho et al. 2021; Wei & Ho et al. 2022). Throughout the experimental evolution, their fitness, 
 mutation rates, and metagenomic sequences were tracked. As a result, the overall fitness improvement over time demonstrates
