--- a/_pages/dei.html
+++ b/_pages/dei.html
@@ -8,6 +8,7 @@ author_profile: true
 {% include base_path %}
 
 <img src="https://static1.squarespace.com/static/5900d1173a041127105a4e78/t/5ee053844df10d4bc294c40a/1591759748146/LabPoster_vDNA.pdf" 
+  alt="Picture"
   width="300px" 
   height="400px"/>
 
