--- a/_pages/dei.html
+++ b/_pages/dei.html
@@ -7,12 +7,9 @@ author_profile: true
 
 {% include base_path %}
 
-By sharing this poster, we are committed with the [pledge](https://sammykatta.com/pledge).
+By sharing this poster, we are committed with the <a href="https://sammykatta.com/pledge">pledge</a>.
 
-<img src="https://static1.squarespace.com/static/5900d1173a041127105a4e78/t/5ee053844df10d4bc294c40a/1591759748146/LabPoster_vDNA.pdf" 
-  alt="Picture"
-  width="300px" 
-  height="400px"/>
+<iframe  src="https://static1.squarespace.com/static/5900d1173a041127105a4e78/t/5ee053844df10d4bc294c40a/1591759748146/LabPoster_vDNA.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
 
 {% for post in site.dei reversed %}
   {% include archive-single.html %}
