--- a/_pages/dei.html
+++ b/_pages/dei.html
@@ -7,9 +7,11 @@ author_profile: true
 
 {% include base_path %}
 
-By sharing this poster, we are committed with the <a href="https://sammykatta.com/pledge">pledge</a>.
+The lab 
 
-<iframe  src="https://static1.squarespace.com/static/5900d1173a041127105a4e78/t/5ee053844df10d4bc294c40a/1591759748146/LabPoster_vDNA.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
+By sharing this poster, we are committed to the <a href="https://sammykatta.com/pledge"><u>pledge</u></a><br \>.
+
+<iframe  src="https://static1.squarespace.com/static/5900d1173a041127105a4e78/t/5ee053844df10d4bc294c40a/1591759748146/LabPoster_vDNA.pdf" style="width: 150%;height: 200%;border: none;"></iframe>
 
 {% for post in site.dei reversed %}
   {% include archive-single.html %}
