--- a/_pages/dei.html
+++ b/_pages/dei.html
@@ -11,7 +11,7 @@ The lab
 
 By sharing this poster, we are also committed to the <a href="https://sammykatta.com/pledge"><u>pledge</u></a><br \>.
 
-<iframe  src="https://static1.squarespace.com/static/5900d1173a041127105a4e78/t/5ee053844df10d4bc294c40a/1591759748146/LabPoster_vDNA.pdf" style="width: 150%;height: 200%;border: none;"></iframe>
+<iframe  src="https://static1.squarespace.com/static/5900d1173a041127105a4e78/t/5ee053844df10d4bc294c40a/1591759748146/LabPoster_vDNA.pdf" style="border: none;"></iframe>
 
 {% for post in site.dei reversed %}
   {% include archive-single.html %}
