--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -5,8 +5,10 @@ permalink: /cv/
 author_profile: true
 ---
 
-Please download <u><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf">Here</a></u>
-<br \><br \>
-<iframe  src="http://wchoEvo.github.io/files/weichinho_cv.pdf" style="width:500px; height:750px;" frameborder="0">
-  
-</iframe>
+{% include base_path %}
+
+<iframe  src="http://wchoEvo.github.io/files/weichinho_cv.pdf" style="width:500px; height:750px;" frameborder="0"></iframe>
+
+{% for post in site.dei reversed %}
+  {% include archive-single.html %}
+{% endfor %}
