--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -7,7 +7,7 @@ author_profile: true
 
 {% include base_path %}
 
-<iframe  src="http://wchoEvo.github.io/files/weichinho_cv.pdf" style="width:500px; height:750px;" frameborder="0"></iframe>
+<embed  src="http://wchoEvo.github.io/files/weichinho_cv.pdf" style="width:500px; height:750px;" frameborder="0" />
 
 {% for post in site.dei reversed %}
   {% include archive-single.html %}
