--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -8,6 +8,7 @@ author_profile: true
 {% include base_path %}
 
 <embed  src="http://wchoEvo.github.io/files/weichinho_cv.pdf" width="800px" height="1600px" />
+<iframe src="http://wchoEvo.github.io/files/weichinho_cv.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
 
 {% for post in site.dei reversed %}
   {% include archive-single.html %}
