--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -10,6 +10,6 @@ author_profile: true
 <embed  src="http://wchoEvo.github.io/files/weichinho_cv.pdf" width="800px" height="1600px" />
 <iframe src="http://wchoEvo.github.io/files/weichinho_cv.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
 
-{% for post in site.dei reversed %}
+{% for post in site.cv reversed %}
   {% include archive-single.html %}
 {% endfor %}
