--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -8,7 +8,7 @@ author_profile: true
 {% include base_path %}
 
 
-<iframe  src="https://github.com/wchoEvo/wchoEvo.github.io/blob/master/files/weichinho_cv.pdf" style="width:500px; height:750px;" frameborder="0"></iframe>
+<embed  src="https://github.com/wchoEvo/wchoEvo.github.io/blob/master/files/weichinho_cv.pdf" style="width:500px; height:750px;" frameborder="0" />
 
 {% for post in site.cv reversed %}
   {% include archive-single.html %}
