--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -7,8 +7,7 @@ author_profile: true
 
 {% include base_path %}
 
-
-<embed  src="https://wchoEvo.github.io/blob/master/files/weichinho_cv.pdf" style="width:500px; height:750px;" frameborder="0" />
+Please download <u><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf">Here</a></u>.
 
 {% for post in site.cv reversed %}
   {% include archive-single.html %}
