--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -7,7 +7,7 @@ author_profile: true
 
 {% include base_path %}
 
-Please download <u><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf">Here</a></u>.
+Please download <a href="http://github.com/wchoEvo/wchoEvo.github.io/files/weichinho_cv.pdf"><u>Here</u></a>.
 
 {% for post in site.cv reversed %}
   {% include archive-single.html %}
