--- a/_pages/research.html
+++ b/_pages/research.html
@@ -31,10 +31,10 @@ lower mutation rates, highlighting spontaneous mutations are still generally del
    the adaptation in another environment? How often should we expect there is a trade-off or trade-up between the 
    adaptive mechanisms for two different environments?</p>
 <p style="text-indent: 25px;">Therefore, the lab plans to use the <i>Escherichia coli</i> populations that have adapted to a rich 
-   medium to start new experimental evolution in new environments. The corresponding experimental evolution using the
+   medium to start new experimental evolution in novel environments. The corresponding experimental evolution using the
    ancestral stock of <i>E. coli</i> will be also performed as a control. By comparing their evolved genomic profiles
    and growth phenotypes, how the past adaptation alters the rate or the adaptive mechanism in a new adaptive process
-   will be identified.</p>
+   will be revealed</p>
 <br />
 <b>3. Plastic and genetic changes of gene expression in microbial evolution</b><br />
 <p style="text-indent: 25px;">Gene expression alterations are frequently observed in microbial adaptations to environmental challenges.
