--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -10,6 +10,10 @@ author_profile: true
 Fall 2023<br \>
 <p style="text-indent: 25px;">BIOL 3133 Genetics Lab</p>
 
+<br \>
+Spring 2024<br \>
+<p style="text-indent: 25px;">BIOL 3332 Genetics</p>
+<p style="text-indent: 25px;">BIOL 3133 Genetics Lab</p>
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
