--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -8,12 +8,12 @@ author_profile: true
 {% include base_path %}
 <br \>
 Fall 2023<br \>
-<p style="text-indent: 25px;">BIOL 3133 Genetics Lab</p>
-
-<br \>
+<p style="text-indent: 25px;">BIOL 3133 GENETICS LAB</p>
 Spring 2024<br \>
-<p style="text-indent: 25px;">BIOL 3332 Genetics</p>
-<p style="text-indent: 25px;">BIOL 3133 Genetics Lab</p>
+<p style="text-indent: 25px;">BIOL 3332 GENETICS</p>
+<p style="text-indent: 25px;">BIOL 3133 GENETICS LAB</p>
+Fall 2024<br \>
+<p style="text-indent: 25px;">BIOL 4395/5380 SPECIAL TOPICS IN BIOLOGY: MOLECULAR AND GENOME EVOLUTION</p>
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
