--- a/_pages/members.html
+++ b/_pages/members.html
@@ -11,7 +11,7 @@ author_profile: true
 <h3>                                           </h3>
 
 <div class="container">
- <div class="row align-items-center mb-3">
+ <div class="row">
     <div class="col-md-3">
       <img src="http://wchoEvo.github.io/images/members/who.jpg"
        class="img-fluid rounded-start"
@@ -19,7 +19,7 @@ author_profile: true
     </div>
     <div class="col-md-3">
       <h3 class="card-title">Dr. Wei-Chin Ho</h3>
-      <h3 class="card-title"><em>Principal Investigator</em></h3>
+      <h3 class="card-text"><em>Principal Investigator</em></h3>
       <p class="card-text"><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf"><u>Download CV</u></a></p>
     </div>
   </div>
