--- a/_pages/members.html
+++ b/_pages/members.html
@@ -28,15 +28,14 @@ author_profile: true
 <div class="card mb-3">
   <div class="row g-0">
   <div class="col-md-4">
-   <img src="http://wchoEvo.github.io/images/members/who.jpg"
+   <img src="http://wchoEvo.github.io/images/bio-photo.jpg"
        class="img-fluid rounded-start"
        style="max-width: 150px;">  
   </div>
      <div class="col-md-4">
         <div class="card-body">
-        <h3 class="card-title">Dr. Wei-Chin Ho</h3>
-        <h3 class="card-title"><em>Principal Investigator</em></h3>
-        <p class="card-text"><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf"><u>Download CV</u></a></p>
+        <h3 class="card-title">You</h3>
+        <h3 class="card-title"><em></em></h3>
         </div>
      </div>
  </div>
