--- a/_pages/members.html
+++ b/_pages/members.html
@@ -11,13 +11,13 @@ author_profile: true
 <h3>                                           </h3>
 
 <div class="container">
- <div class="row">
-    <div class="col-md-3">
+ <div class="row mb-4">
+    <div class="col-md-4">
       <img src="http://wchoEvo.github.io/images/members/who.jpg"
-       class="img-fluid rounded-start"
-       style="max-width: 150px;">  
+       class="img-fluid img-thumbnail"
+       >  
     </div>
-    <div class="col-md-3">
+    <div class="col-md-8">
       <h3 class="card-title">Dr. Wei-Chin Ho</h3>
       <h3 class="card-text"><em>Principal Investigator</em></h3>
       <p class="card-text"><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf"><u>Download CV</u></a></p>
@@ -25,14 +25,14 @@ author_profile: true
   </div>
 </div>
   
-<div class="card mb-3">
+<div class="card mb-4">
   <div class="row g-0">
   <div class="col-md-4">
    <img src="http://wchoEvo.github.io/images/bio-photo.jpg"
-       class="img-fluid rounded-start"
+       class="img-fluid img-thumbnail"
        style="max-width: 150px;">  
   </div>
-     <div class="col-md-4">
+     <div class="col-md-8">
         <div class="card-body">
         <h3 class="card-title">You</h3>
         <h3 class="card-title"><em></em></h3>
