--- a/_pages/members.html
+++ b/_pages/members.html
@@ -12,12 +12,12 @@ author_profile: true
 
 <div class="container">
  <div class="row mb-4">
-    <div class="col-md-4">
+    <div class="col-md-1">
       <img src="http://wchoEvo.github.io/images/members/who.jpg"
        class="img-fluid img-thumbnail"
-       >  
+        style="max-width: 200px;">  
     </div>
-    <div class="col-md-8">
+    <div class="col-md-1">
       <h3 class="card-title">Dr. Wei-Chin Ho</h3>
       <h3 class="card-text"><em>Principal Investigator</em></h3>
       <p class="card-text"><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf"><u>Download CV</u></a></p>
