--- a/_pages/members.html
+++ b/_pages/members.html
@@ -18,9 +18,10 @@ author_profile: true
         style="max-width: 200px;">  
     </div>
     <div class="col-md-1">
-      <h3 class="card-title">Dr. Wei-Chin Ho</h3>
+      <h3 class="card-text">Dr. Wei-Chin Ho</h3>
       <h3 class="card-text"><em>Principal Investigator</em></h3>
       <p class="card-text"><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf"><u>Download CV</u></a></p>
+     <p class="card-text">         </p>    
     </div>
   </div>
 </div>
