--- a/_pages/members.html
+++ b/_pages/members.html
@@ -11,7 +11,7 @@ author_profile: true
 <h3>                                           </h3>
 
 <div class="container">
- <div class="row mb-4">
+ <div class="row">
     <div class="col-md-1">
       <img src="http://wchoEvo.github.io/images/members/who.jpg"
        class="img-fluid img-thumbnail"
