--- a/_pages/members.html
+++ b/_pages/members.html
@@ -7,9 +7,9 @@ author_profile: true
 
 {% include base_path %}
 
-<h4>                                           </h4>
-<h4><a id="Current members"></a>Current Members</h4>
-<h4>                                           </h4>
+<h2>                                           </h2>
+<h2><a id="Current members"></a>Current Members</h2>
+<h2>                                           </h2>
 
 <div class="container">
  <div class="row">
@@ -19,8 +19,8 @@ author_profile: true
         style="max-width: 200px;">  
     </div>
     <div class="col-md-1">
-      <h3 class="card-text">Dr. Wei-Chin Ho</h3>
-      <h3 class="card-text"><em>Principal Investigator</em></h3>
+      <p class="card-text">Dr. Wei-Chin Ho</p>
+      <p class="card-text"><em>Principal Investigator</em></p>
       <p class="card-text"><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf"><u>Download CV</u></a></p>
      <p class="card-text">         </p>    
     </div>
