--- a/_pages/members.html
+++ b/_pages/members.html
@@ -12,13 +12,13 @@ permalink: /members/
 <h2>                                           </h2>
 
 <div class="container">
- <div class="row">
-    <div class="col-md-1">
+ <div class="row align-items-center mb-4">
+    <div class="col-md-4">
       <img src="http://wchoEvo.github.io/images/members/who.jpg"
        class="img-fluid img-thumbnail"
-        style="max-width: 200px;">  
+        style="max-width: 150px;">  
     </div>
-    <div class="col-md-1">
+    <div class="col-md-8">
       <p class="card-text">Dr. Wei-Chin Ho</p>
       <p class="card-text"><em>Principal Investigator</em></p>
       <p class="card-text"><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf"><u>Download CV</u></a></p>
