--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -1,1 +1,21 @@
+---
 
+title: "Group photos"
+permalink: /photos/
+
+---
+
+{% include base_path %}
+
+<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">.</p>
+  </div>
+</div>
+
+
+
+{% for post in site.research %}
+  {% include archive-single.html %}
+{% endfor %}
