--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -8,7 +8,7 @@ permalink: /photos/
 {% include base_path %}
 
 <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="https://wchoEvo.github.io/images/20240829_lab.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">.</p>
   </div>
