--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -7,10 +7,10 @@ permalink: /photos/
 
 {% include base_path %}
 
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 30rem;">
   <img src="https://wchoEvo.github.io/images/20240829_lab.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">.</p>
+    <p class="card-text">Lab meeting 2024-08-29</p>
   </div>
 </div>
 
