--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -10,12 +10,16 @@ permalink: /photos/
 <div class="card" style="width: 30rem;">
   <img src="https://wchoEvo.github.io/images/20240829_lab.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Lab meeting 2024-08-29</p>
+    <p class="card-text">Lab meeting (2024-08-29)</p>
   </div>
 </div>
 
-
-
+<div class="card" style="width: 30rem;">
+  <img src="https://wchoEvo.github.io/images/20240703_lab.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Autoclave training (2024-07-03)</p>
+  </div>
+</div>
 {% for post in site.research %}
   {% include archive-single.html %}
 {% endfor %}
