--- a/_pages/members.html
+++ b/_pages/members.html
@@ -27,8 +27,8 @@ permalink: /members/
   </div>
 </div>
 
-<!--
-<div class="card mb-4">
+
+<div class="card border-primary -4">
   <div class="row g-0">
   <div class="col-md-4">
    <img src="http://wchoEvo.github.io/images/bio-photo.jpg"
@@ -43,7 +43,7 @@ permalink: /members/
      </div>
  </div>
 </div>
--->
+
 
 {% for post in site.research %}
   {% include archive-single.html %}
