--- a/_pages/members.html
+++ b/_pages/members.html
@@ -28,14 +28,14 @@ permalink: /members/
 </div>
 
 
-<div class="card border-primary -4">
+<div class="card border-primary mb-4" style="max-width: 540px;">
   <div class="row g-0">
   <div class="col-md-4">
    <img src="http://wchoEvo.github.io/images/bio-photo.jpg"
        class="img-fluid img-thumbnail"
        style="max-width: 150px;">  
   </div>
-     <div class="col-md-8">
+     <div class="col-md-6">
         <div class="card-body">
         <h3 class="card-title">You</h3>
         <h3 class="card-title"><em></em></h3>
