--- a/_pages/members.html
+++ b/_pages/members.html
@@ -10,6 +10,25 @@ permalink: /members/
 <h2>                                           </h2>
 <h2><a id="Current members"></a>Current Members</h2>
 
+<div class="row">
+  <div class="col-sm-6 mb-3 mb-sm-0">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Test</h5>
+        <p class="card-text">Test.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Test</h5>
+        <p class="card-text">Test.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container">
  <div class="row align-items-center mb-4">
     <div class="col-md-4">
@@ -26,6 +45,7 @@ permalink: /members/
   </div>
 </div>
 
+<h6>                                           </h6>
 
 <div class="card border-primary mb-4" style="max-width: 540px;">
   <div class="row g-0">
