--- a/_pages/members.html
+++ b/_pages/members.html
@@ -11,7 +11,7 @@ permalink: /members/
 <h2><a id="Current members"></a>Current Members</h2>
 
 <div class="row">
-  <div class="col-sm-6 mb-3 mb-sm-0">
+  <div class="col-lg-6 mb-3 mb-sm-0">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Test</h5>
@@ -19,7 +19,7 @@ permalink: /members/
       </div>
     </div>
   </div>
-  <div class="col-sm-6">
+  <div class="col-lg-6">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Test</h5>
