--- a/_pages/members.html
+++ b/_pages/members.html
@@ -22,8 +22,8 @@ permalink: /members/
   <div class="col-lg-6">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Test</h5>
-        <p class="card-text">Test.</p>
+        <h5 class="card-title">Test2</h5>
+        <p class="card-text">Test2.</p>
       </div>
     </div>
   </div>
