--- a/_pages/members.html
+++ b/_pages/members.html
@@ -7,8 +7,8 @@ permalink: /members/
 
 {% include base_path %}
 
-<h2>                                           </h2>
-<h2><a id="Current members"></a>Current Members</h2>
+<h2>               </h2>
+<h2>Current Members</h2>
 
 <div class="row">
   <div class="col-lg-6 mb-3 mb-sm-0">
@@ -45,7 +45,7 @@ permalink: /members/
   </div>
 </div>
 
-<h6>                                           </h6>
+<h4>                                           </h4>
 
 <div class="card border-primary mb-4" style="max-width: 540px;">
   <div class="row g-0">
