--- a/_pages/members.html
+++ b/_pages/members.html
@@ -10,25 +10,6 @@ permalink: /members/
 <h2>               </h2>
 <h2>Current Members</h2>
 
-<div class="row">
-  <div class="col-lg-6 mb-3 mb-sm-0">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Test</h5>
-        <p class="card-text">Test.</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Test2</h5>
-        <p class="card-text">Test2.</p>
-      </div>
-    </div>
-  </div>
-</div>
-
 <div class="container">
  <div class="row align-items-center mb-4">
     <div class="col-md-4">
@@ -37,8 +18,8 @@ permalink: /members/
         style="max-width: 150px;">  
     </div>
     <div class="col-md-8">
-      <p class="card-text">Dr. Wei-Chin Ho</p>
-      <p class="card-text"><em>Principal Investigator</em></p>
+      <p class="card-text">Dr. Wei-Chin Ho<br />
+                           <em>Principal Investigator</em></p>
       <p class="card-text"><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf"><u>Download CV</u></a></p>
      <p class="card-text">         </p>    
     </div>
