--- a/_pages/members.html
+++ b/_pages/members.html
@@ -10,23 +10,21 @@ permalink: /members/
 <h2>               </h2>
 <h2>Current Members</h2>
 
-<div class="container">
- <div class="row align-items-center mb-4">
-    <div class="col-md-4">
-      <img src="http://wchoEvo.github.io/images/members/who.jpg"
-       class="img-fluid img-thumbnail"
-        style="max-width: 150px;">  
-    </div>
-    <div class="col-md-8">
-      <p class="card-text">Dr. Wei-Chin Ho<br />
-                           <em>Principal Investigator</em></p>
-      <p class="card-text"><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf"><u>Download CV</u></a></p>
-     <p class="card-text">         </p>    
-    </div>
-  </div>
-</div>
+<hr width="100%" size="2">
 
-<h4>                                           </h4>
+ <div class="col-md-4">
+  <img src="http://wchoEvo.github.io/images/members/who.jpg"
+       class="img-fluid img-thumbnail"
+        style="max-width: 150px;"> 
+ </div>
+
+    <div class="col-md-8">
+      <p>Dr. Wei-Chin Ho<br /><em>Principal Investigator</em></p>
+      <p ><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf"><u>Download CV</u></a></p>
+    
+    </div>
+
+<hr width="100%" size="2">
 
 <div class="card border-primary mb-4" style="max-width: 540px;">
   <div class="row g-0">
