--- a/_pages/members.html
+++ b/_pages/members.html
@@ -7,40 +7,24 @@ permalink: /members/
 
 {% include base_path %}
 
-<h2>               </h2>
 <h2>Current Members</h2>
 
-<hr width="100%" size="2">
-
- <div class="col-md-4">
-  <img src="http://wchoEvo.github.io/images/members/who.jpg"
+<img src="http://wchoEvo.github.io/images/members/KA.jpg"
        class="img-fluid img-thumbnail"
-        style="max-width: 150px;"> 
- </div>
+        style="max-width: 200px;"> 
+<p>Kingsley Kwaku Amoateng<br /><em>MS student</em></p>
+<p ></p>
 
-    <div class="col-md-8">
-      <p>Dr. Wei-Chin Ho<br /><em>Principal Investigator</em></p>
-      <p ><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf"><u>Download CV</u></a></p>
+<hr width="100%" size="4">
+
+<img src="http://wchoEvo.github.io/images/members/who.jpg"
+       class="img-fluid img-thumbnail"
+        style="max-width: 200px;"> 
+<p>Dr. Wei-Chin Ho<br /><em>Principal Investigator</em></p>
+<p ><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf"><u>Download CV</u></a></p>
     
-    </div>
+<hr width="100%" size="4">
 
-<hr width="100%" size="2">
-
-<div class="card border-primary mb-4" style="max-width: 540px;">
-  <div class="row g-0">
-  <div class="col-md-4">
-   <img src="http://wchoEvo.github.io/images/bio-photo.jpg"
-       class="img-fluid img-thumbnail"
-       style="max-width: 150px;">  
-  </div>
-     <div class="col-md-6">
-        <div class="card-body">
-        <h3 class="card-title">You</h3>
-        <h3 class="card-title"><em></em></h3>
-        </div>
-     </div>
- </div>
-</div>
 
 
 {% for post in site.research %}
