--- a/_pages/members.html
+++ b/_pages/members.html
@@ -9,13 +9,13 @@ permalink: /members/
 
 <h2>Current Members</h2>
 
-<img src="http://wchoEvo.github.io/images/members/KA.jpg"
+<img src="http://wchoEvo.github.io/images/members/KA.jpeg"
        class="img-fluid img-thumbnail"
         style="max-width: 200px;"> 
 <p>Kingsley Kwaku Amoateng<br /><em>MS student</em></p>
 <p ></p>
 
-<hr width="100%" size="4">
+<hr width="100%" size="10">
 
 <img src="http://wchoEvo.github.io/images/members/who.jpg"
        class="img-fluid img-thumbnail"
@@ -23,7 +23,7 @@ permalink: /members/
 <p>Dr. Wei-Chin Ho<br /><em>Principal Investigator</em></p>
 <p ><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf"><u>Download CV</u></a></p>
     
-<hr width="100%" size="4">
+<hr width="100%" size="10">
 
 
 
