--- a/_pages/members.html
+++ b/_pages/members.html
@@ -9,7 +9,7 @@ permalink: /members/
 
 <h2>Current Members</h2>
 
-<img src="http://wchoEvo.github.io/images/members/KA.jpeg"
+<img src="http://wchoEvo.github.io/images/members/kamoateng.jpeg"
        class="img-fluid img-thumbnail"
         style="max-width: 200px;"> 
 <p>Kingsley Kwaku Amoateng<br /><em>MS student</em></p>
