--- a/_pages/members.html
+++ b/_pages/members.html
@@ -17,6 +17,22 @@ permalink: /members/
 
 <hr width="100%" size="10">
 
+<img src="http://wchoEvo.github.io/images/members/cbuford.jpg"
+       class="img-fluid img-thumbnail"
+        style="max-width: 200px;"> 
+<p>Christian Buford<br /><em>Undergraduate Researcher</em></p>
+<p ></p>
+
+<hr width="100%" size="10">
+
+<img src="http://wchoEvo.github.io/images/members/pgarcia.jpg"
+       class="img-fluid img-thumbnail"
+        style="max-width: 200px;"> 
+<p>Pricila Garcia<br /><em>Undergraduate Researcher</em></p>
+<p ></p>
+
+<hr width="100%" size="10">
+
 <img src="http://wchoEvo.github.io/images/members/who.jpg"
        class="img-fluid img-thumbnail"
         style="max-width: 200px;"> 
@@ -25,7 +41,37 @@ permalink: /members/
     
 <hr width="100%" size="10">
 
+<img src="http://wchoEvo.github.io/images/members/bio-photo.jpg"
+       class="img-fluid img-thumbnail"
+        style="max-width: 200px;"> 
+<p>Julian Ramirez<br /><em>Undergraduate Researcher</em></p>
+<p ></p>
 
+<hr width="100%" size="10">
+
+<img src="http://wchoEvo.github.io/images/members/bio-photo.jpg"
+       class="img-fluid img-thumbnail"
+        style="max-width: 200px;"> 
+<p>Brent Orji<br /><em>Undergraduate Researcher</em></p>
+<p ></p>
+
+<hr width="100%" size="10">
+
+<img src="http://wchoEvo.github.io/images/members/averma.jpg"
+       class="img-fluid img-thumbnail"
+        style="max-width: 200px;"> 
+<p>Avnoor Verma<br /><em>Undergraduate Researcher</em></p>
+<p ></p>
+
+<hr width="100%" size="10">
+
+<img src="http://wchoEvo.github.io/images/members/nzarate.jpg"
+       class="img-fluid img-thumbnail"
+        style="max-width: 200px;"> 
+<p>Natalie Zarate<br /><em>Undergraduate Researcher</em></p>
+<p ></p>
+
+<hr width="100%" size="10">
 
 {% for post in site.research %}
   {% include archive-single.html %}
