--- a/_pages/members.html
+++ b/_pages/members.html
@@ -12,7 +12,7 @@ permalink: /members/
 <img src="http://wchoEvo.github.io/images/members/kamoateng.jpeg"
        class="img-fluid img-thumbnail"
         style="max-width: 200px;"> 
-<p>Kingsley Kwaku Amoateng<br /><em>MS student</em></p>
+<p>Kingsley Kwaku Amoateng<br /><em>MS Student</em></p>
 <p ></p>
 
 <hr width="100%" size="10">
