--- a/_pages/members.html
+++ b/_pages/members.html
@@ -73,6 +73,15 @@ permalink: /members/
 
 <hr width="100%" size="10">
 
+<h2>Alumni</h2>
+
+<img src="http://wchoEvo.github.io/images/members/imendez.jpg"
+       class="img-fluid img-thumbnail"
+        style="max-width: 200px;"> 
+<p>Ivan Mendez<br /><em>Undergraduate Researcher (LSAMP)</em></p>
+<p ></p>
+
+<hr width="100%" size="10">
 {% for post in site.research %}
   {% include archive-single.html %}
 {% endfor %}
