--- a/_pages/members.html
+++ b/_pages/members.html
@@ -49,7 +49,7 @@ permalink: /members/
 
 <hr width="100%" size="10">
 
-<img src="http://wchoEvo.github.io/images/members/bio-photo.jpg"
+<img src="http://wchoEvo.github.io/images/members/borji.jpg"
        class="img-fluid img-thumbnail"
         style="max-width: 200px;"> 
 <p>Brent Orji<br /><em>Undergraduate Researcher</em></p>
