--- a/_pages/members.html
+++ b/_pages/members.html
@@ -33,18 +33,10 @@ permalink: /members/
 
 <hr width="100%" size="10">
 
-<img src="http://wchoEvo.github.io/images/members/who.jpg"
+<img src="http://wchoEvo.github.io/images/members/imendez.jpg"
        class="img-fluid img-thumbnail"
         style="max-width: 200px;"> 
-<p>Dr. Wei-Chin Ho<br /><em>Principal Investigator</em></p>
-<p ><a href="http://wchoEvo.github.io/files/weichinho_cv.pdf"><u>Download CV</u></a></p>
-    
-<hr width="100%" size="10">
-
-<img src="http://wchoEvo.github.io/images/members/jramirez.jpg"
-       class="img-fluid img-thumbnail"
-        style="max-width: 200px;"> 
-<p>Julian Ramirez<br /><em>Undergraduate Researcher</em></p>
+<p>Ivan Mendez<br /><em>Undergraduate Researcher</em></p>
 <p ></p>
 
 <hr width="100%" size="10">
@@ -57,6 +49,14 @@ permalink: /members/
 
 <hr width="100%" size="10">
 
+<img src="http://wchoEvo.github.io/images/members/jramirez.jpg"
+       class="img-fluid img-thumbnail"
+        style="max-width: 200px;"> 
+<p>Julian Ramirez<br /><em>Undergraduate Researcher</em></p>
+<p ></p>
+
+<hr width="100%" size="10">
+
 <img src="http://wchoEvo.github.io/images/members/averma.jpg"
        class="img-fluid img-thumbnail"
         style="max-width: 200px;"> 
@@ -64,6 +64,10 @@ permalink: /members/
 <p ></p>
 
 <hr width="100%" size="10">
+
+
+
+<h2>Alumni</h2>
 
 <img src="http://wchoEvo.github.io/images/members/nzarate.jpg"
        class="img-fluid img-thumbnail"
@@ -73,15 +77,6 @@ permalink: /members/
 
 <hr width="100%" size="10">
 
-<h2>Alumni</h2>
-
-<img src="http://wchoEvo.github.io/images/members/imendez.jpg"
-       class="img-fluid img-thumbnail"
-        style="max-width: 200px;"> 
-<p>Ivan Mendez<br /><em>Undergraduate Researcher (LSAMP)</em></p>
-<p ></p>
-
-<hr width="100%" size="10">
 {% for post in site.research %}
   {% include archive-single.html %}
 {% endfor %}
