--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -14,6 +14,9 @@ Spring 2024<br \>
 <p style="text-indent: 25px;">BIOL 3133 GENETICS LAB</p>
 Fall 2024<br \>
 <p style="text-indent: 25px;">BIOL 4395/5380 SPECIAL TOPICS IN BIOLOGY: MOLECULAR AND GENOME EVOLUTION</p>
+Spring 2025<br \>
+<p style="text-indent: 25px;">BIOL 3332 GENETICS</p>
+<p style="text-indent: 25px;">BIOL 3133 GENETICS LAB</p>
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
