--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,16 +7,24 @@ author_profile: true
 
 {% include base_path %}
 <br \>
-Fall 2023<br \>
-<p style="text-indent: 25px;">BIOL 3133 GENETICS LAB</p>
-Spring 2024<br \>
+Fall 2025<br \>
+<p style="text-indent: 25px;">BIOL 3378 INTRO To PROGRAMMING FOR BIOLOGISTS</p>
+<p style="text-indent: 25px;">BIOL 3178 INTRO To PROGRAMMING FOR BIOLOGISTS LAB</p>
+<p style="text-indent: 25px;">BIOL 5193 GRADUATE SEMINAR IN BIOLOGY: OMICS APPROACHES IN BIOLOGY</p>
+
+
+
+Spring 2025<br \>
 <p style="text-indent: 25px;">BIOL 3332 GENETICS</p>
 <p style="text-indent: 25px;">BIOL 3133 GENETICS LAB</p>
 Fall 2024<br \>
 <p style="text-indent: 25px;">BIOL 4395/5380 SPECIAL TOPICS IN BIOLOGY: MOLECULAR AND GENOME EVOLUTION</p>
-Spring 2025<br \>
+Spring 2024<br \>
 <p style="text-indent: 25px;">BIOL 3332 GENETICS</p>
 <p style="text-indent: 25px;">BIOL 3133 GENETICS LAB</p>
+Fall 2023<br \>
+<p style="text-indent: 25px;">BIOL 3133 GENETICS LAB</p>
+
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
