--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -8,8 +8,8 @@ author_profile: true
 {% include base_path %}
 <br \>
 Fall 2025<br \>
-<p style="text-indent: 25px;">BIOL 3378 INTRO To PROGRAMMING FOR BIOLOGISTS</p>
-<p style="text-indent: 25px;">BIOL 3178 INTRO To PROGRAMMING FOR BIOLOGISTS LAB</p>
+<p style="text-indent: 25px;">BIOL 3378 INTRO TO PROGRAMMING FOR BIOLOGISTS</p>
+<p style="text-indent: 25px;">BIOL 3178 INTRO TO PROGRAMMING FOR BIOLOGISTS LAB</p>
 <p style="text-indent: 25px;">BIOL 5193 GRADUATE SEMINAR IN BIOLOGY: OMICS APPROACHES IN BIOLOGY</p>
 
 
