--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -9,7 +9,9 @@ author_profile: true
 <br \>
 Fall 2025<br \>
 <p style="text-indent: 25px;">BIOL 3378 INTRO TO PROGRAMMING FOR BIOLOGISTS</p>
+<a href="http://wchoEvo.github.io/files/F25_BIOL3378_syllabus.pdf"><u>Syllabus</u></a>.
 <p style="text-indent: 25px;">BIOL 3178 INTRO TO PROGRAMMING FOR BIOLOGISTS LAB</p>
+<a href="http://wchoEvo.github.io/files/F25_BIOL3178_syllabus.pdf"><u>Syllabus</u></a>.
 <p style="text-indent: 25px;">BIOL 5193 GRADUATE SEMINAR IN BIOLOGY: OMICS APPROACHES IN BIOLOGY</p>
 
 
