--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -8,12 +8,11 @@ author_profile: true
 {% include base_path %}
 <br \>
 Fall 2025<br \>
-<p style="text-indent: 25px;">BIOL 3378 INTRO TO PROGRAMMING FOR BIOLOGISTS</p>
-<a href="http://wchoEvo.github.io/files/F25_BIOL3378_syllabus.pdf"><u>Syllabus</u></a>.
-<p style="text-indent: 25px;">BIOL 3178 INTRO TO PROGRAMMING FOR BIOLOGISTS LAB</p>
-<a href="http://wchoEvo.github.io/files/F25_BIOL3178_syllabus.pdf"><u>Syllabus</u></a>.
+<p style="text-indent: 25px;">BIOL 3378 INTRO TO PROGRAMMING FOR BIOLOGISTS
+<a href="http://wchoEvo.github.io/files/F25_BIOL3378_syllabus.pdf"><u>Syllabus</u></a></p>
+<p style="text-indent: 25px;">BIOL 3178 INTRO TO PROGRAMMING FOR BIOLOGISTS LAB
+<a href="http://wchoEvo.github.io/files/F25_BIOL3178_syllabus.pdf"><u>Syllabus</u></a></p>
 <p style="text-indent: 25px;">BIOL 5193 GRADUATE SEMINAR IN BIOLOGY: OMICS APPROACHES IN BIOLOGY</p>
-
 
 
 Spring 2025<br \>
