--- a/_pages/opportunities.html
+++ b/_pages/opportunities.html
@@ -9,7 +9,7 @@ author_profile: true
 <br />
 <p> In the lab, there are opportunities to learn microbiology techniques and/or computational skills for research. Students with either biology or computational background are welcome as long as interested in genetics, evolution, and/or microbiology.</p> 
 <br />
-<b>Undergraduate Students and Perspective Master Students</b><br />
+<b>Undergraduate Students and Prospective Master Students</b><br />
 <p style="text-indent: 25px;"> Please feel free to contact Dr. Ho by an email if you are interested in joining the lab!</p> 
 
 {% for post in site.research %}
