--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -8,29 +8,29 @@ permalink: /photos/
 {% include base_path %}
 
 <div class="image-row">
-  <div class="card" style="width: 30rem;">
+  <div class="card" style="width: 20rem;">
     <img src="https://wchoEvo.github.io/images/20250411_lyseum_1.jpg" class="card-img-top" alt="...">
   </div>
   <div class="card-body">
     <p class="card-text">Lyseum Symposium (2025-04-11)</p>
   </div>
-  <div class="card" style="width: 30rem;">
+  <div class="card" style="width: 20rem;">
     <img src="https://wchoEvo.github.io/images/20250411_lyseum_2.jpg" class="card-img-top" alt="...">
   </div>
-  <div class="card" style="width: 30rem;">
-    <img src="https://wchoEvo.github.io/images/20250411_lyseum_3.jpg" class="card-img-top" alt="...">
+  <div class="card" style="width: 20rem;">
+    <img src="https://wchoEvo.github.io/images/20250411_lyseum_3.png" class="card-img-top" alt="...">
   </div>
 </div>
 
 
-<div class="card" style="width: 30rem;">
+<div class="card" style="width: 20rem;">
   <img src="https://wchoEvo.github.io/images/20240829_lab.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">Lab meeting (2024-08-29)</p>
   </div>
 </div>
 
-<div class="card" style="width: 30rem;">
+<div class="card" style="width: 20rem;">
   <img src="https://wchoEvo.github.io/images/20240703_lab.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">Autoclave training (2024-07-03)</p>
