--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -9,13 +9,13 @@ permalink: /photos/
 
 <div class="image-row">
   <div class="card" style="width: 20rem;">
-    <img src="https://wchoEvo.github.io/images/20250411_lyseum_1.jpg" class="card-img-top" alt="...">
+    <img src="https://wchoEvo.github.io/images/20250411_lyseum_1.jpeg" class="card-img-top" alt="...">
   </div>
   <div class="card-body">
     <p class="card-text">Lyseum Symposium (2025-04-11)</p>
   </div>
   <div class="card" style="width: 20rem;">
-    <img src="https://wchoEvo.github.io/images/20250411_lyseum_2.jpg" class="card-img-top" alt="...">
+    <img src="https://wchoEvo.github.io/images/20250411_lyseum_2.jpeg" class="card-img-top" alt="...">
   </div>
   <div class="card" style="width: 20rem;">
     <img src="https://wchoEvo.github.io/images/20250411_lyseum_3.png" class="card-img-top" alt="...">
