--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -7,7 +7,7 @@ permalink: /photos/
 
 {% include base_path %}
 
-<div class="image-row">
+<div class="card-row" style="gap: 10px;">
   <div class="card" style="width: 20rem;">
     <img src="https://wchoEvo.github.io/images/20250411_lyseum_1.jpeg" class="card-img-top" alt="...">
   </div>
