--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -7,7 +7,7 @@ permalink: /photos/
 
 {% include base_path %}
 
-<div class="card-row" style="gap: 10px;">
+<div class="card-row d-flex" style="gap: 10px;">
   <div class="card" style="width: 20rem;">
     <img src="https://wchoEvo.github.io/images/20250411_lyseum_1.jpeg" class="card-img-top" alt="...">
   </div>
@@ -17,9 +17,9 @@ permalink: /photos/
   <div class="card" style="width: 20rem;">
     <img src="https://wchoEvo.github.io/images/20250411_lyseum_3.png" class="card-img-top" alt="...">
   </div>
-  <div class="card-body">
+</div>
+<div class="card-body">
     <p class="card-text">Lyseum Symposium (2025-04-11)</p>
-  </div>
 </div>
 
 
