--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -7,7 +7,7 @@ permalink: /photos/
 
 {% include base_path %}
 
-<div class="card-row d-flex" style="gap: 1px;">
+<div class="card-row d-flex" style="margin: 1px;">
   <div class="card" style="width: 25rem;">
     <img src="https://wchoEvo.github.io/images/20250411_lyseum_1.jpeg" class="card-img-top" alt="...">
   </div>
