--- a/_pages/members.html
+++ b/_pages/members.html
@@ -33,6 +33,14 @@ permalink: /members/
 
 <hr width="100%" size="10">
 
+<img src="http://wchoEvo.github.io/images/members/mhaque.jpg"
+       class="img-fluid img-thumbnail"
+        style="max-width: 200px;"> 
+<p>Md Al-Amin Haque<br /><em>MS Student</em></p>
+<p ></p>
+
+<hr width="100%" size="10">
+
 <img src="http://wchoEvo.github.io/images/members/imendez.jpg"
        class="img-fluid img-thumbnail"
         style="max-width: 200px;"> 
